# ParallelComputingPracticeCPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp  snode.h
CUDA/mat_mul/: main.cu
CUDA/mat_mul_shared/: CMakeLists.txt  main.cu
CUDA/mat_trans/: main.cu
CUDA/mat_trans_shared/: main.cu
GameOfLife/: CMakeLists.txt
GameOfLife/include/: CMakeLists.txt
GameOfLife/include/include/: mylib.cpp  ndarray.h  ndarray_msvc.h
GameOfLife/src/: main.cpp
MemoryOptimization/: aosoa.cpp  cache_skip.cpp  false_sharing.cpp  kernel_convol.cpp  matrix_alloc.cpp  matrix_mul.cpp  prefetch.cpp  write_read.cpp  write_read_msvc.cpp  xy_yx_loop.cpp
SparseDataStructure/Sparse_Bits/: bits_00.cpp  bits_01.cpp  segmentation_fault.cpp
SparseDataStructure/Sparse_gird/: dense_grid_char.cpp  dense_grid_float.cpp  dense_grid_map.cpp  dense_grid_unorderedmap.cpp  unordedMap_bit.cpp
SparseDataStructure/Sparse_matrix/: 00.cpp
SparseDataStructure/multilayer_sparse/: dense.cpp  pointer_dense.cpp
include/: CMakeLists.txt
include/include/: alignalloc.h  alignalloc_msvc.h  bate.h  mylib.cpp  mylib.h  ndarray.h  ndarray_msvc.h  pod.h
src/: main.cpp
